[tool.poetry]
name = "recport"
version = "0.1.1"
description = ""
authors = ["harit <harit.c@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pythainav = "^0.1.3"
tomlkit = "^0.5.8"
loguru = "^0.4.1"
uncleengineer = "^0.2"
pandas-datareader = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.scripts]
recport = 'recport.main:run1'
showport = 'recport.main:run2'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

